--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.8.4
+python-dateutil==2.9.0.post0
+# Sólo si vas a usar Service Account (opcional):
+gspread==6.1.4
+google-auth==2.33.0
 
