--- a/.github/workflows/uci_report.yml
+++ b/.github/workflows/uci_report.yml
@@ -1,1 +1,42 @@
+name: Build UCI report
+
+on:
+  schedule:
+    - cron: "*/30 * * * *"   # cada 30 min
+  workflow_dispatch: {}
+
+permissions:
+  contents: write
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build report
+        env:
+          SHEET_CSV_URL: "https://docs.google.com/spreadsheets/d/1LCSYbJp5s8YafQFwRjBZ1pGP82zoIjy-RVxD-o3gn3w/gviz/tq?tqx=out:csv&sheet=base"
+          WRITE_TO_DOCS_INDEX: "true"   # genera docs/index.md (útil si tienes GitHub Pages)
+        run: |
+          python scripts/uci_build_report.py
+
+      - name: Commit & push
+        run: |
+          git config user.name "uci-bot"
+          git config user.email "uci-bot@users.noreply.github.com"
+          git add reports/ docs/ || true
+          git commit -m "chore(report): auto-update UCI report [skip ci]" || exit 0
+          git push
 
